<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainbox"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Background"
    android:orientation="vertical"
    tools:context="com.example.a3teesystem.calculator.MainActivity">



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:id="@+id/green"
    android:layout_margin="30dp"
    android:layout_weight="3"
    android:style="@style/Background">
    
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="14"
        android:layout_gravity="center"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="X"/>
    
</LinearLayout>

    <LinearLayout
        android:layout_weight="7"
        android:id="@+id/BlueBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:style="@style/Background"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="30dp"
        >

        <LinearLayout
            android:layout_weight="5"

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/Box1"
            android:background="#000"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/x_text"
                android:layout_weight="1"
                android:layout_margin="2dp"

                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/x_text1"
                android:layout_margin="2dp"
                android:layout_weight="1"
                />
            <Button
            android:layout_width="match_parent"
                android:layout_height="0dp"
            android:text="@string/x_text2"
                android:layout_margin="2dp"

                android:layout_weight="1"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="2dp"
                android:text="@string/x_text3"

                android:layout_weight="1"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/x_text4"

                android:layout_margin="2dp"
                android:layout_weight="1"/>



        </LinearLayout>

        <LinearLayout
            android:style="@style/Background"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/Box2"
            android:orientation="vertical"
            android:layout_weight="5"
            android:layout_marginRight="30dp">



            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/y_text"
                android:layout_margin="2dp"
                android:layout_weight="1"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="2dp"
                android:text="@string/y_text1"

                android:layout_weight="1"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/y_text2"
                android:layout_margin="2dp"

                android:layout_weight="1"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/y_text3"
                android:layout_margin="2dp"

                android:layout_weight="1"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/y_text4"

                android:layout_margin="2dp"
                android:layout_weight="1"/>

        </LinearLayout>





        <LinearLayout
            android:background="#000"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/BlackBox"
            android:orientation="vertical"
            android:layout_weight="21">

            <LinearLayout
                android:backgroundTint="#000"
            android:id="@+id/GreenBox1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:background="#ff0"
                android:layout_weight="1">


                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/z_text"
                    android:layout_margin="2dp"

                    />


                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/z_text1"
                    android:layout_margin="2dp"

                    />


                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/z_text2"
                    android:layout_margin="2dp"

                    />


                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"

                    android:layout_margin="2dp"
                    android:layout_height="match_parent"
                    android:text="@string/z_text3" />


                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"

                    android:layout_margin="2dp"
                    android:layout_height="match_parent"
                    android:text="@string/z_text4" />







            </LinearLayout>


            <LinearLayout
                android:id="@+id/GreenBox2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="#000"
                android:orientation="horizontal"

                android:layout_weight="1">




                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:layout_margin="2dp"
                    android:text="@string/xy_text" />


                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/xy_text1"

                    android:layout_margin="2dp"
                    android:layout_weight="1"/>


                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/xy_text2"

                    android:layout_margin="2dp"
                    android:layout_weight="1"/>


                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/xy_text3"

                    android:layout_margin="2dp"
                    android:layout_weight="1"/>



                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/xy_text4"
                    android:layout_margin="2dp"


                    />








            </LinearLayout>


            <LinearLayout
                android:id="@+id/BlueBox1"
                android:layout_width="match_parent"
                android:layout_height="0dp"

                android:layout_weight="2"

                android:orientation="horizontal">







                <LinearLayout
                    android:id="@+id/Red"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="#0ff"
                    android:layout_weight="4"
                    android:orientation="vertical">






                    <LinearLayout
                        android:id="@+id/Boxx"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="#fcc"
                        android:orientation="horizontal">






                        <Button
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/xz_text"
                            android:layout_margin="2dp"

                            android:layout_weight="1"/>


                        <Button
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/xz_text1"

                            android:layout_margin="2dp"
                            android:layout_weight="1"/>


                        <Button
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/xz_text2"

                            android:layout_margin="2dp"
                            android:layout_weight="1"/>



                        <Button
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/xz_text4"

                            android:layout_margin="2dp"
                            android:layout_height="match_parent"
                             />






                    </LinearLayout>



                    <LinearLayout
                        android:id="@+id/Boxy"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="#ccc"
                        android:orientation="horizontal">





                        <Button
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/zero_text"
                            android:layout_margin="2dp"
                            android:layout_weight="2"/>


                        <Button
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/dot_text"

                            android:layout_margin="2dp"
                            android:layout_weight="1"/>



                        <Button
                            android:layout_width="0dp"
                            android:layout_weight="1"

                            android:text="@string/plus_text"
                            android:layout_height="match_parent"
                            android:layout_margin="2dp"
                            />





                    </LinearLayout>



                </LinearLayout>



            <Button
                android:layout_width="0dp"

                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/equal_text"
                android:layout_margin="2dp"/>




            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>






















